codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_mixed.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 90)"
---
• Used computer · 5 actions · 1 failed
  ├ Failed: Open browser — No browser is available
  ├ Captured screenshot · Capture the reproduced bug
  └ 3 more · ⌃t
