codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__computer_activity__tests__computer_activity_narrow.snap
---
source: tui/src/history_cell/computer_activity_tests.rs
expression: "render(&cell, 24)"
---
• Used computer · 5
  actions · 1 failed
  ├ Failed: No browser …
  ├ Captured screenshot…
  └ 3 more · ⌃t
